--- a/LDA/LDA/Base.lproj/Main.storyboard
+++ b/LDA/LDA/Base.lproj/Main.storyboard
@@ -113,7 +113,7 @@
                         </barButtonItem>
                     </items>
                 </toolbar>
-                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" id="R6V-mC-uRF">
+                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" id="R6V-mC-uRF">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="216"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <date key="date" timeIntervalSinceReferenceDate="550107231.91043901">
