--- a/LDA/LDA/CustomCells/MultipleStopTVC.xib
+++ b/LDA/LDA/CustomCells/MultipleStopTVC.xib
@@ -30,7 +30,7 @@
                             <constraint firstAttribute="width" constant="60" id="vNx-2o-mbm"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
-                        <state key="normal" title="FRM">
+                        <state key="normal" title="FROM">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
                         <connections>
